# llm_agent

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
config/: bot_flows.co  config.yml
src/main/: main.py
src/main/app/: client.py  server.py
src/main/package/: __init__.py  langchain.py
src/test/: crewai_test.ipynb  langchain_test.ipynb  search_api_test.ipynb  test.ipynb  test_fastapi.py
src/test/app/: __init__.py  langchain.py  server.py
src/test/config/: bot_flows.co  config.yml
src/test/vectorstores/db/: chroma.sqlite3
