[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = "Project to create a LLM research agent that can provide me with updated, trendy news or research papers in domains"
authors = ["sangbinyun <bin0113@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.2.2"
langchain = "^0.1.17"
langchain-cli = "^0.0.21"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
google-search-results = "^2.4.2"
langchain-community = "^0.0.36"
python-dotenv = "^1.0.1"
crewai = "^0.28.8"
requests = "^2.31.0"
duckduckgo-search = "^5.3.0"
chromadb = "^0.5.0"
scholarly = "^1.7.11"
nemoguardrails = "^0.9.0"
langchain-chroma = "^0.1.1"
gpt4all = "^2.7.0"
flashrank = "^0.2.5"
free-proxy = "^1.1.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
